--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
     #editor {
       margin-right: 0px;
       margin-bottom: 0px;
+      z-index: 0;
     }
 
     #outputWindow {
       margin: 0px;
       padding: 0px;
       border: 1px solid gray;
+      z-index: 0;
     }
 
     #settings {
