--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ var buttonsBoxEL = document.getElementById("buttonsBox");
 
 var ifrWin = outputFrameEL.contentWindow || outputFrameEL.window;
 var ifrDoc = outputFrameEL.contentDocument || ifrWin.document;
-outputFrameEL.sandbox.add("allow-pointer-lock", "allow-same-origin", "allow-scripts", "allow-popups", "allow-modals", "allow-forms");
+outputFrameEL.sandbox.add("allow-pointer-lock", "allow-same-origin", "allow-scripts", "allow-popups", "allow-modals", "allow-forms", "allow-downloads");
 
 var settingsEL = document.getElementById("settings");
 
